--- a/server/views/licenceConditions/includes/formBuilder.pug
+++ b/server/views/licenceConditions/includes/formBuilder.pug
@@ -33,6 +33,9 @@ div.form-group
 
   if formItem === 'courseOrCentre'
     include courseOrCentre
+  
+  if formItem === 'courseOrCentreV2'
+    include courseOrCentreV2
 
   if formItem === 'noWorkWithAge'
     include noWorkWithAge
@@ -60,6 +63,9 @@ div.form-group
 
   if formItem === 'reportingDetails'
     include reportingDetails
+
+  if formItem === 'reportingDetailsV2'
+    include reportingDetailsV2
 
   if formItem === 'notToReside'
     include notToReside
