--- a/server/views/licenceConditions/includes/specificItem.pug
+++ b/server/views/licenceConditions/includes/specificItem.pug
@@ -1,4 +1,4 @@
 div.pure-g
   div.pure-u-3-4
-    label(for='specificItem') Specfic item
-    input(type='text' name='specificItem' id='specificItem' class='form-control' value=condition.user_submission && condition.user_submission.specificItem aria-label="Specific item")
+    label(for='specificItem') Specfied item
+    input(type='text' name='specificItem' id='specificItem' class='form-control' value=condition.user_submission && condition.user_submission.specificItem aria-label="Specified item")
