DCS-1307 content change for advice on no COM allocation

--- a/server/views/taskList/tasks/caBlockedTask.pug
+++ b/server/views/taskList/tasks/caBlockedTask.pug
@@ -22,12 +22,10 @@ mixin noOffenderNumber()
             p The relationship will then show in the HDC service
 
 mixin lduInactive()
-    h2.heading-medium You cannot submit this case
+    h2.heading-medium Action needed to submit this case
     div.pure-g
         div.pure-u-1.pure-u-md-3-4
-            p This is because the assigned Community Offender Manager is in an area not covered by the HDC roll out
-            h3.heading-small What you need to do
-            p Process the case in NOMIS instead
+            p You need to contact the probation team to ask them to review this person's Community Offender Manager allocation in Delius.
 
 mixin comNotAllocated()
     h2.heading-medium You cannot submit this case
