DCS-1893 upgrade gradle wrapper back to 7.6 and upgrade json path dependency to invalidatate dependency cache in circle
DCS-1893 downgrade gradle to invalidate circleci cache

DCS-1893 added integration test version pages for risk management

DCS-1893 pr changes, removed empty string from RiskVersion type and updated getRiskVersion to chck for in progress v1 risk management in licence

DCS-1893 small refactor to getRoStageState

DCS-1893 added condition to only show mandatory address warning banner on tasklist if mandatory checks not considered and bass address not suitable

DCS-1893 fix risk management page layout

DCS-1893 update risk action routes and add risk management v2 review content

DCS-1893 added licence status tests for RO risk management processing

DCS-1893 fix warnings for risk management content in task list view

DCS-1893 fix conditional risk management content in task list view

DCS-1893 integration tests

DCS-1893 updated risk page template, risk form validation and RiskVersion type to string options

--- a/server/views/review/risk.pug
+++ b/server/views/review/risk.pug
@@ -12,15 +12,26 @@ block content
   div.pure-u-1.pure-u-md-1-2.paddingBottom
     h2.heading-large Risk management
 
-    div.smallPaddingTop
-      p Are there any risk management planning actions that must take place prior to release?
+    if risk.version == '2'
+      div.smallPaddingTop
+        p Have you requested and considered current risk information from the police and children’s services related to the proposed address?
 
-      span#planningActions.block.bold #{risk.planningActions}
+        span#hasConsideredChecks.block.bold #{risk.hasConsideredChecks}
 
-    div.smallPaddingTop
-      p Are you still awaiting information?
+      div.smallPaddingTop
+        p Are you waiting for any other information?
 
-      span#awaitingInformation.block.bold #{risk.awaitingInformation}
+        span#awaitingOtherInformation.block.bold #{risk.awaitingOtherInformation}
+    else 
+      div.smallPaddingTop
+        p Are there any risk management planning actions that must take place prior to release?
+
+        span#planningActions.block.bold #{risk.planningActions}
+
+      div.smallPaddingTop
+        p Are you still awaiting information?
+
+        span#awaitingInformation.block.bold #{risk.awaitingInformation}
 
     if risk.riskManagementDetails
       div.smallPaddingTop
