--- a/server/views/review/includes/riskManagement.pug
+++ b/server/views/review/includes/riskManagement.pug
@@ -3,30 +3,56 @@ include ./itemAndError
 -var risk = data.risk && data.risk.riskManagement || {}
 -var errors = errorObject.risk && errorObject.risk.riskManagement || {}
 
-div.pure-g.borderBottomLight.midPaddingTopBottom
-  div.pure-u-1-2
-    div.pure-g
-      span.pure-u-3-4 Are there any risk management planning actions that must take place prior to release?
-  div.pure-u-1-2
-    +itemAndError(risk.planningActions, errors.planningActions, "planningActions")
-
-
-div.pure-g.borderBottomLight.midPaddingTopBottom
-  div.pure-u-1-2
-    div.pure-g
-      span.pure-u-3-4 Are you still waiting for information to inform risk management planning?
-
-  div.pure-u-1-2
-    if risk.awaitingInformation === 'Yes'
+if risk.version == '2'
+  div.pure-g.borderBottomLight.midPaddingTopBottom
+    div.pure-u-1-2
       div.pure-g
-        div.pure-u-1.pure-u-sm-3-5.notice-container
-          div.notice
-            i.icon.icon-important
-              span.visually-hidden Warning
+        span.pure-u-3-4 Have you requested and considered current risk information from the police and children’s services related to the proposed address?
+    div.pure-u-1-2
+      +itemAndError(risk.hasConsideredChecks, errors.hasConsideredChecks, "hasConsideredChecks")
+  
+  div.pure-g.borderBottomLight.midPaddingTopBottom
+    div.pure-u-1-2
+      div.pure-g
+        span.pure-u-3-4 Are you waiting for any other information?
 
-            strong.bold-small Still waiting for information
-    else
-      +itemAndError(risk.awaitingInformation, errors.awaitingInformation, "awaitingInformation")
+    div.pure-u-1-2
+      if risk.awaitingOtherInformation === 'Yes'
+        div.pure-g
+          div.pure-u-1.pure-u-sm-3-5.notice-container
+            div.notice
+              i.icon.icon-important
+                span.visually-hidden Warning
+
+              strong.bold-small Still waiting for information
+      else
+        +itemAndError(risk.awaitingOtherInformation, errors.awaitingOtherInformation, "awaitingOtherInformation")
+
+else
+  div.pure-g.borderBottomLight.midPaddingTopBottom
+    div.pure-u-1-2
+      div.pure-g
+        span.pure-u-3-4 Are there any risk management planning actions that must take place prior to release?
+    div.pure-u-1-2
+      +itemAndError(risk.planningActions, errors.planningActions, "planningActions")
+
+
+  div.pure-g.borderBottomLight.midPaddingTopBottom
+    div.pure-u-1-2
+      div.pure-g
+        span.pure-u-3-4 Are you still waiting for information to inform risk management planning?
+
+    div.pure-u-1-2
+      if risk.awaitingInformation === 'Yes'
+        div.pure-g
+          div.pure-u-1.pure-u-sm-3-5.notice-container
+            div.notice
+              i.icon.icon-important
+                span.visually-hidden Warning
+
+              strong.bold-small Still waiting for information
+      else
+        +itemAndError(risk.awaitingInformation, errors.awaitingInformation, "awaitingInformation")
 
 if risk.riskManagementDetails
   div.pure-g.borderBottomLight.midPaddingTopBottom
