--- a/server/views/risk/riskManagementV1.pug
+++ b/server/views/risk/riskManagementV1.pug
@@ -25,6 +25,7 @@ block content
             div.multiple-choice
               input#planningYes(type="radio" checked=data.planningActions === 'Yes' name="planningActions" value="Yes")
               label(for="planningYes") Yes
+            
             div.multiple-choice
               input#planningNo(type="radio" checked=data.planningActions === 'No' name="planningActions" value="No")
               label(for="planningNo") No
@@ -41,8 +42,11 @@ block content
 
           div.form-group
             label(for='riskManagementDetails') Provide details of your checks
-              span.form-hint.midMarginBottom.smallMarginTop You must confirm here that you have considered information from the police and social services when assessing the suitability of the proposed address.
-              span.form-hint.smallMarginBottom Also include details of information you're waiting for and when you should get it.
+              if version == '2'
+                span.form-hint.midMarginBottom.smallMarginTop If you're waiting for information include details of what you're waiting for and when you should get it.
+              else
+                span.form-hint.midMarginBottom.smallMarginTop You must confirm here that you have considered information from the police and social services when assessing the suitability of the proposed address.
+                span.form-hint.smallMarginBottom Also include details of information you're waiting for and when you should get it.
             textarea(name='riskManagementDetails' id='riskManagementDetails' class='form-control' rows='5' aria-label="Provide details of when you expect to get the information")
               if data.riskManagementDetails
                 | #{data.riskManagementDetails}
