DCS-1893 fix risk management page layout

--- a/server/views/risk/riskManagement.pug
+++ b/server/views/risk/riskManagement.pug
@@ -32,8 +32,8 @@ block content
                 label(for="consideredChecksNo") No
 
             div.form-group.inline.smallPaddingTop
-              p Are you waiting for any other information?
-              span.form-hint.smallMarginTop For example, information from other agencies or their prison offender manager.
+              p.noMargin Are you waiting for any other information?
+              span.form-hint.smallMarginBottom.smallMarginTop For example, information from other agencies or their prison offender manager.
 
               div.multiple-choice
                 input#awaitingOtherYes(type="radio" checked=data.awaitingOtherInformation === 'Yes' name="awaitingOtherInformation" value="Yes")
