DCS-1896 add new risk version content changes to pdf and CA read view tasklist

--- a/server/views/forms/curfewAddress.pug
+++ b/server/views/forms/curfewAddress.pug
@@ -24,7 +24,10 @@ block content
 
   include includes/conditions
 
-  include includes/risk
+  if riskManagement.version === '2'
+    include includes/riskV2
+  else
+    include includes/riskV1
 
   include includes/victim
 
