DCS-1984 fix com notify content

--- a/server/views/admin/licences/notify.pug
+++ b/server/views/admin/licences/notify.pug
@@ -13,8 +13,8 @@ block content
       p Notify the COM that they have been sent the offender's case.
       p Pressing the button below will send an email to 
         a(href="/hdc/contact/" + bookingId) #{prisonerInfo.com.name}
-        |, their functional mailbox.
+        |  and their functional mailbox.
       form(method='POST' action='/admin/licences/' + bookingId + '/notifyRo')
         input(type="hidden" name="_csrf" value=csrfToken)
-        input.requiredButton.button(type="submit" value="Send emails")
+        input.requiredButton.button(type="submit" value="Send email")
       
