DCS-2171 content change to curfew address radio

--- a/server/views/proposedAddress/curfewAddressChoice.pug
+++ b/server/views/proposedAddress/curfewAddressChoice.pug
@@ -11,7 +11,7 @@ block formItems
       label(for="address") Yes, they provided an address
     div.multiple-choice
       input#bass(type="radio" checked=data && data.decision === 'Bass' name="decision" value="Bass")
-      label(for="bass") No, they asked for a BASS property
+      label(for="bass") No, they asked for a CAS2 property
     div.multiple-choice
       input#optout(type="radio" checked=data && data.decision === 'OptOut' name="decision" value="OptOut")
       label(for="optout") No, they opted out of HDC
