DCS-2172 content change to curfew address h2

--- a/server/views/bassReferral/bassRequest.pug
+++ b/server/views/bassReferral/bassRequest.pug
@@ -1,7 +1,7 @@
 extends ../formTemplates/formTemplate
 
 block question
-  | Does the offender have a preferred BASS area?
+  | Does the offender have a preferred CAS2 area?
 
 block formItems
 
