DCS-2175 ca eligibility licence review page content change

--- a/server/views/review/includes/licenceSummary.pug
+++ b/server/views/review/includes/licenceSummary.pug
@@ -40,7 +40,7 @@ div.largeMarginBottom
           include approvedPremisesAddress
   else if sections.bassArea
     div.borderBottom
-      +titleRow('Proposed BASS area', 'bassAreaDetails')
+      +titleRow('Proposed CAS2 area', 'bassAreaDetails')
         +roCase
           +change("/hdc/bassReferral/bassAreaCheck/change/" + bookingId, 'bassEditLink' )
 
