--- a/server/views/review/includes/bassArea.pug
+++ b/server/views/review/includes/bassArea.pug
@@ -21,7 +21,7 @@ div.pure-g.borderBottomLight.midPaddingTopBottom
       +itemAndError(bassRequest.proposedTown, errors.proposedTown, "proposedTown")
 
     div.pure-u-1.pure-u-md-1-2
-      span Is the BASS area suitable?
+      span Is the CAS2 area suitable?
     div.pure-u-1.pure-u-md-1-2
       +itemAndError(bassAreaCheck.bassAreaSuitable, errors.bassAreaSuitable, "bassAreaSuitable")
 
