DCS-2179 bass area check content change

--- a/server/views/bassReferral/bassAreaCheck.pug
+++ b/server/views/bassReferral/bassAreaCheck.pug
@@ -13,11 +13,11 @@ block content
     include ../includes/personalDetailsSummary
     +errorBannerWithDetail(errorObject)
 
-    h2.heading-large BASS area check
+    h2.heading-large CAS2 area check
 
     div.pure-u-1.pure-u-md-1-2
       if bassRequest.specificArea === 'Yes'
-        | The offender has asked for a BASS property in the following area:
+        | The offender has asked for a CAS2 property in the following area:
 
         div.paddingTop.paddingBottom
           div.pure-u-1-2
