DCS-2184 cas2 withdraw content change

--- a/server/views/bassReferral/bassWithdrawn.pug
+++ b/server/views/bassReferral/bassWithdrawn.pug
@@ -6,8 +6,8 @@ block content
     include ../includes/back
 
     div.pure-u-1-2
-      h2.heading-large BASS withdrawn
+      h2.heading-large CAS2 withdrawn
 
-      p Would you like to enter a new BASS request?
+      p Would you like to enter a new CAS2 request?
 
       include ./includes/newBassForm
