--- a/server/views/bassReferral/includes/bassRequestActions.pug
+++ b/server/views/bassReferral/includes/bassRequestActions.pug
@@ -27,4 +27,4 @@ div
         div
           form(method="post", name="withdrawBass", action="/hdc/bassReferral/bassOffer/reinstate/" + bookingId)
             input(type="hidden" name="_csrf" value=csrfToken)
-            button#reinstateBass.button.largeMarginBottom(type='submit', role='button', data-element-id="continue-button") Reinstate BASS request
+            button#reinstateBass.button.largeMarginBottom(type='submit', role='button', data-element-id="continue-button") Reinstate CAS2 request
