--- a/server/views/bassReferral/includes/newBassForm.pug
+++ b/server/views/bassReferral/includes/newBassForm.pug
@@ -13,4 +13,4 @@ form(method="post")
           label(for="no") No
 
     include ../../includes/formSubmit
-      a#reinstate.requiredButton.button.button-secondary.smallMarginTop(href="/hdc/bassReferral/bassOffer/" + bookingId role="button") Reinstate BASS request
+      a#reinstate.requiredButton.button.button-secondary.smallMarginTop(href="/hdc/bassReferral/bassOffer/" + bookingId role="button") Reinstate CAS2 request
