--- a/server/views/bassReferral/includes/bassRequestActions.pug
+++ b/server/views/bassReferral/includes/bassRequestActions.pug
@@ -19,8 +19,8 @@ div
   else
     div.pure-g
       div.pure-u-1.pure-u-md-1-2
-        p Enter a new BASS request
-        a#addNewBass.largeMarginBottom.button(href="/hdc/bassReferral/bassRequest/" + bookingId) Add a new BASS request
+        p Enter a new CAS2 request
+        a#addNewBass.largeMarginBottom.button(href="/hdc/bassReferral/bassRequest/" + bookingId) Add a new CAS2 request
 
       div.pure-u-1.pure-u-md-1-2
         p Reinstate this request
