DCS-2188 dm review cas2 content change

--- a/server/views/review/bassOffer.pug
+++ b/server/views/review/bassOffer.pug
@@ -10,7 +10,7 @@ block content
     include ../includes/backToCheckList
     include ../includes/personalDetailsSummary
 
-    h2.heading-medium BASS request outcome
+    h2.heading-medium CAS2 request outcome
 
     div.pure-g.midPaddingTopBottom
 
@@ -23,7 +23,7 @@ block content
           div#proposedCounty.bold #{bassRequest.proposedCounty}
 
       div.pure-u-1.pure-u-md-1-3.paddingTop
-        span BASS outcome
+        span CAS2 outcome
       div.pure-u-1.pure-u-md-2-3.paddingTop
 
         if licenceStatus.decisions.bassAreaNotSuitable
