DCS-2181 ca review task list heading content change (#1445)
* DCS-2181 ca review task list heading content change

* DCS-2181 integration tests fix

* DCS-2182 bass referral offer page content changes

* DCS-2183 unsuitable for cas2 content change

* DCS-2184 cas2 withdraw content change

* DCS-2186 enter new cas2 page content change

--- a/server/views/bassReferral/includes/bassRequestActions.pug
+++ b/server/views/bassReferral/includes/bassRequestActions.pug
@@ -2,29 +2,29 @@ div
   if !bassWithdrawn
     div.pure-g
       div.pure-u-1.pure-u-md-1-2
-        p BASS offer withdrawn
+        p CAS2 offer withdrawn
         div
           form(method="post", name="withdrawBass", action="/hdc/bassReferral/bassOffer/withdraw/" + bookingId)
             input(type="hidden" name="_csrf" value=csrfToken)
             input(type="hidden" name="withdrawalType" value="offer")
-            button#withdrawBassOffer.button.largeMarginBottom(type='submit', role='button', data-element-id="continue-button") Withdraw BASS request
+            button#withdrawBassOffer.button.largeMarginBottom(type='submit', role='button', data-element-id="continue-button") Withdraw CAS2 request
 
       div.pure-u-1.pure-u-md-1-2
-        p Offender has withdrawn BASS request
+        p Offender has withdrawn CAS2 request
         div
           form(method="post", name="withdrawBass", action="/hdc/bassReferral/bassOffer/withdraw/" + bookingId)
             input(type="hidden" name="_csrf" value=csrfToken)
             input(type="hidden" name="withdrawalType" value="request")
-            button#withdrawBassRequest.button.largeMarginBottom(type='submit', role='button', data-element-id="continue-button") Withdraw BASS request
+            button#withdrawBassRequest.button.largeMarginBottom(type='submit', role='button', data-element-id="continue-button") Withdraw CAS2 request
   else
     div.pure-g
       div.pure-u-1.pure-u-md-1-2
-        p Enter a new BASS request
-        a#addNewBass.largeMarginBottom.button(href="/hdc/bassReferral/bassRequest/" + bookingId) Add a new BASS request
+        p Enter a new CAS2 request
+        a#addNewBass.largeMarginBottom.button(href="/hdc/bassReferral/bassRequest/" + bookingId) Add a new CAS2 request
 
       div.pure-u-1.pure-u-md-1-2
         p Reinstate this request
         div
           form(method="post", name="withdrawBass", action="/hdc/bassReferral/bassOffer/reinstate/" + bookingId)
             input(type="hidden" name="_csrf" value=csrfToken)
-            button#reinstateBass.button.largeMarginBottom(type='submit', role='button', data-element-id="continue-button") Reinstate BASS request
+            button#reinstateBass.button.largeMarginBottom(type='submit', role='button', data-element-id="continue-button") Reinstate CAS2 request
