DCS-2190 ca licence creation cas2 content change

--- a/server/views/bassReferral/includes/bassAddressForm.pug
+++ b/server/views/bassReferral/includes/bassAddressForm.pug
@@ -11,7 +11,7 @@ mixin bassAddressForm
             input.form-control(id="bassArea" name="bassArea" value=bassOffer.bassArea autofocus aria-label="Area provided")
 
           div.form-group.midMarginBottom.paddingTop
-            div.bold.smallPaddingBottom BASS address
+            div.bold.smallPaddingBottom CAS2 address
             label.form-label(for="address1") Building and street
             input.form-control(id="address1" name="addressLine1" value=bassOffer.addressLine1 autofocus aria-label="Building and street")
             input.form-control.smallMarginTop(id="address2" name="addressLine2" value=bassOffer.addressLine2)
