DCS-2194 CA Eligibility Curfew address content change

--- a/server/views/review/includes/bassRequest.pug
+++ b/server/views/review/includes/bassRequest.pug
@@ -17,5 +17,5 @@ div.pure-g.borderBottomLight.midPaddingTopBottom
 
   else
     div.pure-u-1.pure-u-md-1-2
-      span Offender does not have a preferred BASS area
+      span Offender does not have a preferred CAS2 area
 
