--- a/server/views/review/includes/bassArea.pug
+++ b/server/views/review/includes/bassArea.pug
@@ -7,7 +7,7 @@ div.pure-g.borderBottomLight.midPaddingTopBottom
 
   if bassRequest.specificArea === 'No'
     div.pure-u-1.pure-u-md-1-2
-      span Offender does not have a preferred BASS area
+      span Offender does not have a preferred CAS2 area
 
   else
     div.pure-u-1.pure-u-md-1-2
