--- a/server/views/bassReferral/bassOffer.pug
+++ b/server/views/bassReferral/bassOffer.pug
@@ -26,7 +26,7 @@ block content
 
     div.pure-u-1-2
       if bassRequest.specificArea === 'No'
-        | Offender does not have a preferred BASS area
+        | Offender does not have a preferred CAS2 area
 
         div.paddingTop.paddingBottom
           div.pure-u-1-1
