DCS-2196 ca review bass area rejected content changes

--- a/server/views/bassReferral/rejected.pug
+++ b/server/views/bassReferral/rejected.pug
@@ -9,8 +9,8 @@ block content
   div.pure-g.pure-u-1
     include ../includes/back
 
-    h2.heading-large BASS area rejected
-    p The following BASS area has been returned by the Community Offender Manager:
+    h2.heading-large CAS2 area rejected
+    p The following CAS2 area has been returned by the Community Offender Manager:
 
     div.pure-g.borderBottomLight
       div.pure-u-1.pure-u-md-1-2
