DCS-2201 updating remaining bass rejected references

--- a/server/views/review/bassOffer.pug
+++ b/server/views/review/bassOffer.pug
@@ -27,7 +27,7 @@ block content
       div.pure-u-1.pure-u-md-2-3.paddingTop
 
         if licenceStatus.decisions.bassAreaNotSuitable
-          div#bassOfferOutcome.bold BASS area rejected
+          div#bassOfferOutcome.bold CAS2 area rejected
 
         -var offer = licenceStatus.decisions.bassAccepted
         if offer === 'Yes'
