DCS-2201 updating remaining bass not suitable references

--- a/server/views/review/bassOffer.pug
+++ b/server/views/review/bassOffer.pug
@@ -35,7 +35,7 @@ block content
         else if offer === 'Waiting'
           div#bassOfferOutcome.bold Offer made and on waiting list
         else if offer === 'Unsuitable'
-          div#bassOfferOutcome.bold Not suitable for BASS
+          div#bassOfferOutcome.bold Not suitable for CAS2
         else if offer === 'Unavailable'
           div#bassOfferOutcome.bold Address not available
 
