--- a/server/views/taskList/tasks/informBassTask.pug
+++ b/server/views/taskList/tasks/informBassTask.pug
@@ -1,11 +1,11 @@
 div.largeMarginBottom
 
-  h2.heading-medium Submit BASS request
+  h2.heading-medium Submit CAS2 request
 
   div.pure-g
 
     div.pure-u-1.pure-u-md-3-4
-      | The BASS area has been approved by the community offender manager. You should now submit the request to BASS
+      | The CAS2 area has been approved by the community offender manager. You should now submit the request to CAS2
 
     div.pure-u-1.pure-u-md-1-4.center
       +taskButton("/caseList/active", 'Back to case list', 'grey')
