DCS-2201 updating remaining bass offer and area references

--- a/server/views/review/includes/licenceSummary.pug
+++ b/server/views/review/includes/licenceSummary.pug
@@ -47,7 +47,7 @@ div.largeMarginBottom
       if !showErrors || data.bassReferral && data.bassReferral.bassAreaCheck
         include bassArea
       else
-        +alert('Enter the BASS area details', 'bass-address-error')
+        +alert('Enter the CAS2 area details', 'bass-address-error')
 
   else if sections.approvedPremisesAddress
     div.borderBottom
