--- a/server/views/review/bassOffer.pug
+++ b/server/views/review/bassOffer.pug
@@ -47,13 +47,13 @@ block content
 
       if bassOffer.bassAccepted === 'Yes' && bassAddress.bassArea && bassAddress.addressLine1
         div.pure-u-1.pure-u-md-1-3.paddingTop
-          span Bass offer area
+          span CAS2 offer area
         div.pure-u-1.pure-u-md-2-3.paddingTop#bassOfferArea
           if bassAddress.bassArea
             div.bold #{bassAddress.bassArea}
 
         div.pure-u-1.pure-u-md-1-3.paddingTop
-          span Bass offer address
+          span CAS2 offer address
         div.pure-u-1.pure-u-md-2-3.paddingTop#bassOfferAddress
           if bassAddress.addressLine1
             div.bold #{bassAddress.addressLine1}
